[package]
authors = [
  "Kang Seonghoon <public+rust@mearie.org>",
  "Brandon W Maister <quodlibetor@gmail.com>",
]
name = "chrono"
version = "0.4.19"

categories = ["date-and-time"]
description = "Date and time library for Rust"
documentation = "https://docs.rs/chrono/"
edition = "2018"
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml", "/Makefile"]
homepage = "https://github.com/chronotope/chrono"
keywords = ["date", "time", "calendar"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/chronotope/chrono"

[badges]
appveyor = {repository = "chronotope/chrono"}
travis-ci = {repository = "chronotope/chrono"}

[lib]
name = "chrono"

[features]
__doctest = []
__internal_bench = []
alloc = []
clock = ["libc", "std", "winapi"]
default = ["clock", "std", "oldtime"]
oldtime = ["time"]
std = []
unstable-locales = ["pure-rust-locales", "alloc"]
wasmbind = ["wasm-bindgen", "js-sys"]

[dependencies]
libc = {version = "0.2.69", optional = true}
num-integer = {version = "0.1.36", default-features = false}
num-traits = {version = "0.2", default-features = false}
pure-rust-locales = {version = "0.5.2", optional = true}
rustc-serialize = {version = "0.3.20", optional = true}
serde = {version = "1.0.99", default-features = false, optional = true}
time = {version = "0.1.43", optional = true}

[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
js-sys = {version = "0.3", optional = true}# contains FFI bindings for the JS Date API
wasm-bindgen = {version = "0.2", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.0", features = ["std", "minwinbase", "minwindef", "timezoneapi"], optional = true}

[dev-dependencies]
bincode = {version = "0.8.0"}
criterion = {version = "0.3"}
doc-comment = {version = "0.3"}
num-iter = {version = "0.1.35", default-features = false}
serde_derive = {version = "1", default-features = false}
serde_json = {version = "1"}

[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.playground]
features = ["serde"]

[[bench]]
harness = false
name = "chrono"
required-features = ["__internal_bench"]

[[bench]]
harness = false
name = "serde"
required-features = ["serde"]
